Added new tests for the account class and AccountManager class